# gazecontrol

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  install.bat  pyproject.toml  requirements.txt  run.bat  settings.toml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: GazeControl_v2_AntiDrift.docx  architecture.md
docs/adr/: 0001-stage-pipeline.md  0002-settings-precedence.md  0003-model-sha256-pinning.md  0004-mypy-strict-no-overrides.md  0005-crash-handler-stack.md  0006-public-api-contract.md
gazecontrol/: __init__.py  __main__.py  config.py  main.py
gazecontrol/capture/: __init__.py  frame_preprocessor.py
gazecontrol/gaze/: __init__.py  drift_corrector.py  eyetrax_patches.py  face_crop.py  gaze_mapper.py  l2cs_model.py
gazecontrol/gesture/: feature_extractor.py  hand_detector.py  mlp_classifier.py
gazecontrol/intent/: state_machine.py  window_selector.py
gazecontrol/overlay/: __init__.py
gazecontrol/utils/: model_downloader.py  profiler.py
gazecontrol/window_manager/: __init__.py  base.py  windows_mgr.py
models/: manifest.json
src/gazecontrol/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging_config.py  main.py  paths.py  settings.py
src/gazecontrol/calibration/: __init__.py  runner.py
src/gazecontrol/capture/: __init__.py  frame_grabber.py  frame_preprocessor.py
src/gazecontrol/filters/: __init__.py  acceleration_curve.py  dead_zone.py  kalman.py  one_euro.py
src/gazecontrol/gaze/: __init__.py  backend.py  drift_corrector.py  ensemble_backend.py  eyetrax_backend.py  eyetrax_patches.py  face_crop.py  fixation_detector.py  gaze_mapper.py  l2cs_backend.py  l2cs_model.py  one_euro_filter.py
src/gazecontrol/gaze/compat/: __init__.py  eyetrax.py
src/gazecontrol/gesture/: __init__.py  classifier.py  feature_extractor.py  fingertip_mapper.py  fusion.py  hand_detector.py  labels.py  mlp_classifier.py  pinch_tracker.py  rule_classifier.py
src/gazecontrol/intent/: __init__.py  state_machine.py  types.py  window_selector.py
src/gazecontrol/interaction/: __init__.py  grip_region.py  interaction_fsm.py  types.py  window_hit_tester.py  window_selector.py
src/gazecontrol/overlay/: __init__.py  hud_renderer.py  hud_state.py  launcher_panel.py  mode_selector_dialog.py  overlay_window.py
src/gazecontrol/pipeline/: __init__.py  action_stage.py  calibration.py  capture_stage.py  context.py  engine.py  gaze_stage.py  gesture_stage.py  intent_stage.py  interaction_stage.py  orchestrator.py  pointer_fusion_stage.py  qt_adapter.py  stage.py
src/gazecontrol/runtime/: __init__.py  crash.py  input_mode.py  pipeline_factory.py
src/gazecontrol/utils/: correlation.py  model_downloader.py  profiler.py  threading_helpers.py
src/gazecontrol/window_manager/: __init__.py  base.py  launcher.py  windows_mgr.py
tests/: conftest.py  helpers.py  test_cli.py  test_drift_corrector.py  test_errors.py  test_fixation_detector.py  test_frame_preprocessor.py  test_logging_config.py  test_one_euro_filter.py  test_paths.py  test_settings.py  test_settings_gaze.py  test_state_machine.py
tests/api/: test_public_surface.py
tests/capture/: test_frame_grabber.py  test_frame_preprocessor.py
tests/filters/: test_acceleration_curve.py  test_dead_zone.py  test_kalman.py  test_one_euro.py
tests/gaze/: test_backend_protocol.py  test_drift_corrector.py  test_ensemble_backend.py  test_face_crop.py  test_fixation_detector.py  test_gaze_mapper.py  test_l2cs_model.py  test_one_euro_filter.py
tests/gesture/: test_classifier_protocol.py  test_feature_extractor.py  test_fingertip_mapper.py  test_fusion.py  test_labels.py  test_mlp_classifier.py  test_pinch_tracker.py  test_rule_classifier.py
tests/intent/: test_types.py  test_window_selector.py
tests/interaction/: test_grip_region.py  test_interaction_fsm.py  test_window_selector.py
tests/overlay/: test_hud_renderer.py  test_overlay_window.py
tests/pipeline/: test_action_stage.py  test_capture_stage.py  test_context.py  test_context_gaze_fields.py  test_engine.py  test_gaze_stage.py  test_gesture_stage.py  test_intent_stage.py  test_pointer_fusion_stage.py
tests/runtime/: test_crash.py  test_input_mode.py  test_pipeline_factory.py
tests/utils/: test_correlation.py  test_model_downloader.py  test_profiler.py
tests/window_manager/: test_base.py  test_launcher.py  test_windows_mgr.py
tools/: benchmark_gaze.py  diagnose_calibration.py  download_l2cs.py  find_camera.py  record_gesture_dataset.py  train_gesture_mlp.py  train_gesture_tcn.py
