[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gazecontrol"
version = "0.2.0"
description = "Eye tracking + gesture control for desktop"
requires-python = ">=3.11"
dependencies = [
    "eyetrax>=0.4.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "PyQt6>=6.4.0",
    "pywin32>=306",
    "scikit-learn>=1.3.0",
    "mediapipe>=0.10.0",
    "onnxruntime-directml>=1.16.0",
]

[project.scripts]
gazecontrol = "gazecontrol.__main__:main"

[tool.setuptools.packages.find]
include = ["gazecontrol*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
