[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gazecontrol"
version = "0.3.0-dev"
description = "Eye tracking + hand-gesture desktop control"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ciro" }]
keywords = ["eye-tracking", "gaze", "gesture", "accessibility", "desktop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Accessibility",
]
dependencies = [
    "eyetrax>=0.4.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "PyQt6>=6.4.0",
    "pywin32>=306",
    "scikit-learn>=1.3.0",
    "mediapipe>=0.10.0",
    "onnxruntime-directml>=1.16.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "screeninfo>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "hypothesis>=6.100.0",
    "pre-commit>=3.7.0",
    "types-setuptools",
]

[project.scripts]
gazecontrol = "gazecontrol.cli:main"

# ---------------------------------------------------------------------------
# Setuptools
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]
include = ["gazecontrol*"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "N",              # pep8-naming
    "UP",             # pyupgrade
    "B",              # flake8-bugbear
    "SIM",            # flake8-simplify
    "RUF",            # ruff-specific
    "PT",             # flake8-pytest-style
    "S",              # flake8-bandit (security)
    "ANN",            # flake8-annotations (type hints)
    "D",              # pydocstyle
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "ANN101", # Missing type annotation for self
    "ANN102", # Missing type annotation for cls
    "S101",   # Use of assert (needed in tests)
    "S603",   # subprocess without shell=True OK
    "ANN401", # Dynamically typed expressions (Any) discouraged — allow for now
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["gazecontrol"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "S"]
"tools/**" = ["ANN", "D", "S"]

# ---------------------------------------------------------------------------
# mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

# Strict for well-typed modules
[[tool.mypy.overrides]]
module = [
    "gazecontrol.gaze.*",
    "gazecontrol.utils.*",
    "gazecontrol.intent.*",
]
strict = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "win32: tests that require Windows and Win32 APIs (skipped on Linux/macOS)",
    "slow: tests that take more than 2 seconds",
    "integration: integration tests requiring real hardware or installed models",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["gazecontrol"]
branch = true
omit = ["src/gazecontrol/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
