[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gazecontrol"
dynamic = ["version"]
description = "Hand gesture + eye tracking desktop control — point, pinch, drag, resize, gaze"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Ciro" }]
keywords = ["hand-gesture", "gesture", "accessibility", "desktop", "pinch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Accessibility",
    "Typing :: Typed",
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "PyQt6>=6.4.0",
    "pywin32>=306; sys_platform == 'win32'",
    "mediapipe>=0.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "platformdirs>=4.0.0",
    "onnxruntime>=1.17.0",
]

[project.optional-dependencies]
logging = ["python-json-logger>=2.0"]
gpu = [
    "onnxruntime-gpu>=1.17.0",
]
eye = [
    "eyetrax>=0.4.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.4.0",
    "hypothesis>=6.100.0",
    "pre-commit>=3.7.0",
    "types-setuptools",
    "pip-audit>=2.7.0",
    "bandit>=1.7.0",
    "cyclonedx-bom>=4.0.0",
    "twine>=5.0.0",
    "build>=1.2.0",
]

[project.scripts]
gazecontrol = "gazecontrol.cli:main"

# ---------------------------------------------------------------------------
# Setuptools
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["src"]
include = ["gazecontrol*"]

[tool.setuptools.package-data]
gazecontrol = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "gazecontrol.__version__" }

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",              # isort
    "N",              # pep8-naming
    "UP",             # pyupgrade
    "B",              # flake8-bugbear
    "SIM",            # flake8-simplify
    "RUF",            # ruff-specific
    "PT",             # flake8-pytest-style
    "S",              # flake8-bandit (security)
    "ANN",            # flake8-annotations (type hints)
    "D",              # pydocstyle
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "S101",   # Use of assert (needed in tests)
    "S603",   # subprocess without shell=True OK
    "ANN401", # Dynamically typed expressions (Any) discouraged — allow for now
    "N806",   # Mathematical convention: uppercase matrix variables (X, Xs, etc.)
    "RUF001", # Ambiguous unicode in strings — Italian text intentional
    "RUF002", # Ambiguous unicode in docstrings — Italian text intentional
    "RUF003", # Ambiguous unicode in comments — Italian text intentional
    "S110",   # try-except-pass — intentional in recovery paths
    "E501",   # Line too long — URLs and long formulas exempt
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["gazecontrol"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "S", "N", "PT", "B017", "B904", "SIM117", "SIM102", "SIM105", "E741"]
"tools/**" = ["ANN", "D", "S", "E402", "UP031", "N803", "E741"]
"src/gazecontrol/errors.py" = ["D102"]                            # user_message overrides — purpose obvious from class
"src/gazecontrol/window_manager/base.py" = ["D102"]               # abstract primitives — override docstring lives on subclass
"src/gazecontrol/window_manager/windows_mgr.py" = ["D102", "D205", "D417"]
"src/gazecontrol/cli.py" = ["B904"]                                # SystemExit raise without 'from'

# ---------------------------------------------------------------------------
# mypy — static type checking (strict, no overrides)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_redundant_casts = true
warn_unreachable = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "win32: tests that require Windows and Win32 APIs (skipped on Linux/macOS)",
    "slow: tests that take more than 2 seconds",
    "integration: integration tests requiring real hardware or installed models",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["gazecontrol"]
branch = true
omit = [
    # Qt UI layer — requires a display, tested separately with pytest-qt
    "src/gazecontrol/overlay/*",
    "src/gazecontrol/pipeline/qt_adapter.py",
    # Win32 window manager — requires real Windows COM/API calls
    "src/gazecontrol/window_manager/windows_mgr.py",
    "src/gazecontrol/window_manager/base.py",
    "src/gazecontrol/window_manager/launcher.py",
    # Win32 window selector — requires real EnumWindows
    "src/gazecontrol/interaction/window_selector.py",
    # Trivial entry point
    "src/gazecontrol/__main__.py",
    # CLI entry point — requires Qt + argparse setup, tested via integration
    "src/gazecontrol/cli.py",
    # Hand detector — requires MediaPipe model file on disk
    "src/gazecontrol/gesture/hand_detector.py",
    # App launcher — requires Win32 ShellExecute
    "src/gazecontrol/window_manager/__init__.py",
    # Gaze backend implementations require ONNX runtime / eyetrax / MediaPipe FaceDetection
    "src/gazecontrol/gaze/eyetrax_backend.py",
    "src/gazecontrol/gaze/l2cs_backend.py",
    "src/gazecontrol/gaze/l2cs_model.py",
    "src/gazecontrol/gaze/face_crop.py",
    "src/gazecontrol/gaze/compat/eyetrax.py",
    # Calibration runner — requires Qt + camera + L2CS
    "src/gazecontrol/calibration/runner.py",
    # Mode selector dialog — Qt-only UI, covered by manual tests
    "src/gazecontrol/overlay/mode_selector_dialog.py",
    # Runtime factory — wiring smoke-tested via cli; pure code branches covered
    "src/gazecontrol/runtime/pipeline_factory.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "^\\s*\\.\\.\\.$",
]
